--- a/EnterpriseWPF/App.config
+++ b/EnterpriseWPF/App.config
@@ -8,7 +8,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-<connectionStrings><add name="EmployeesDataContext" connectionString="Server=(local)\KURSNETSQLSRV;Database=Enterprise;User Id=user2;Password=U$er_!@#;" providerName="System.Data.SqlClient" /></connectionStrings><userSettings>
+	<connectionStrings>
+	</connectionStrings>
+	<userSettings>
         <EmployeesWPF.Properties.Settings>
             <setting name="Culture" serializeAs="String">
                 <value>"pl-PL"</value>
