added login and filter

--- a/EnterpriseWPF/App.config
+++ b/EnterpriseWPF/App.config
@@ -2,7 +2,11 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="EnterpriseWPF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="EmployeesWPF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="EnterpriseWPF.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
@@ -12,6 +16,26 @@
 		
 	</connectionStrings>
 	<userSettings>
+        <EnterpriseWPF.Properties.Settings>
+               <setting name="Culture" serializeAs="String">
+                      <value>"pl-PL"</value>
+               </setting>
+               <setting name="ServerAddress" serializeAs="String">
+                      <value />
+               </setting>
+               <setting name="ServerName" serializeAs="String">
+                      <value />
+               </setting>
+               <setting name="DatabaseName" serializeAs="String">
+                      <value />
+               </setting>
+               <setting name="UserId" serializeAs="String">
+                      <value />
+               </setting>
+               <setting name="Password" serializeAs="String">
+                      <value />
+               </setting>
+        </EnterpriseWPF.Properties.Settings>
         <EmployeesWPF.Properties.Settings>
             <setting name="Culture" serializeAs="String">
                 <value>"pl-PL"</value>
@@ -33,4 +57,14 @@
             </setting>
         </EmployeesWPF.Properties.Settings>
     </userSettings>
+ <applicationSettings>
+  <EnterpriseWPF.Properties.Settings>
+   <setting name="UserDataLogin" serializeAs="String">
+    <value>admin</value>
+   </setting>
+   <setting name="UserDataPassword" serializeAs="String">
+    <value>a</value>
+   </setting>
+  </EnterpriseWPF.Properties.Settings>
+ </applicationSettings>
 </configuration>
