--- a/EnterpriseWPF/Properties/Settings.settings
+++ b/EnterpriseWPF/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="EmployeesWPF.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="EnterpriseWPF.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="Culture" Type="System.String" Scope="User">
@@ -19,6 +19,12 @@
     </Setting>
     <Setting Name="Password" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="UserDataLogin" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">admin</Value>
+    </Setting>
+    <Setting Name="UserDataPassword" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">a</Value>
     </Setting>
   </Settings>
 </SettingsFile>
